# K417_Capstone_G9

./: .gitignore  dataclean.ipynb  eda.ipynb  maikin.ipynb  maikin_dataclean.ipynb  maikin_eda.ipynb  predict.ipynb  pyproject.toml  requirements.txt
data/bukka/: bukka-index_cleaned.csv  bukka-index_raw.csv
data/chingin/: wage_m_corr_and_elasti.csv  wage_structure_manuf.csv  wage_structure_mfg_ratios.csv  wage_structure_numeric_total.csv
data/kakei/: kakei-data_solo.csv  kakei-data_solo_cleaned.csv  kakei-data_sousetai.csv
data/maikin/: e-4-1-cy.csv  employees_data.csv  fulltime_emp.csv
data/seizou/: manufacture-index-m_1978-2007.csv
data/shotoku/: 2025_kashobun.csv  non-c_raw.csv
