[project]
name = "k417"
version = "0.1.0"
description = "Python Project for K417 Capstone Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asttokens==3.0.0",
    "bleach==6.2.0",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "executing==2.2.1",
    "fonttools==4.60.1",
    "idna==3.11",
    "ipykernel==7.1.0",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.7",
    "japanize-matplotlib==1.1.3",
    "jedi==0.19.2",
    "joblib==1.5.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "jupyterlab-widgets==3.0.15",
    "kaggle==1.7.4.5",
    "kagglehub==0.3.13",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.7",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "numpy==2.3.4",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "pillow==12.0.0",
    "platformdirs==4.5.0",
    "prompt-toolkit==3.0.52",
    "protobuf==6.33.0",
    "psutil==7.1.1",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "python-slugify==8.0.4",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "requests==2.32.5",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "seaborn==0.13.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "statsmodels>=0.14.5",
    "text-unidecode==1.3",
    "threadpoolctl==3.6.0",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uv==0.9.4",
    "wcwidth==0.2.14",
    "webencodings==0.5.1",
    "widgetsnbextension==4.0.14",
]
